# start-tauri-leptos

./: Cargo.toml  LICENSE  README.md  build-binaries.ps1  build-binaries.sh
app/: Cargo.toml
app/src/: lib.rs
end2end/tests/: example.spec.ts
frontend/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  sidecar.rs
