[workspace]
resolver = "2"
members = ["app", "frontend", "server", "src-tauri"]

[workspace.package]
license = "MIT"
authors = ["Rustify"]


# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = "0.8" 
leptos_meta = "0.8"
leptos_router = "0.8"
leptos_axum = "0.8"

axum = "0.8"
cfg-if = "1.0"
console_error_panic_hook = "0.1"
console_log = "1.0"
http = "1.3"
log = "0.4"
simple_logger = "5.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
wasm-bindgen = "0.2"



[[workspace.metadata.leptos]]
name = "app"
bin-package = "server"
lib-package = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/input.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
